examples/test/testpolicy6647.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6647
  namespace: namespace289
spec:
  podSelector:
    matchLabels:
      key6: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value12
      podSelector:
        matchLabels:
          key3: value37
          key32: value26
          key43: value30
